--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,8 @@ bevy = { version = "0.14.2", default-features = false, features = [
     "bevy_core_pipeline",
     "bevy_render",
     "bevy_pbr",
+    "bevy_scene",
+    "bevy_gltf",
     "bevy_sprite",
     "bevy_text",
     "bevy_ui",
