Add auth token service, update dependencies, and fix GLB conversion
- Introduce AuthTokenService with base64, hmac, sha2 signing
- Add token generation/verification in login flow
- Include character summaries in protocol messages
- Fix BMD-to-GLB conversion: coordinate swizzle, texture mapping, primitive info
- Add base64, hmac, sha2 dependencies to Cargo.toml
- Update server handlers, runtime, and tests to use auth tokens

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -63,6 +63,11 @@ thiserror = "1"
 # Concurrency
 dashmap = "6"
 
+# Auth token signing
+base64 = "0.22"
+hmac = "0.12"
+sha2 = "0.10"
+
 # QUIC transport
 quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
 rustls = "0.23"
