Add common crate with WorldMap enum and integrate into login scene
- Added `common` crate defining `WorldMap` enum (82 variants) and helper methods
- Updated client to use `WorldMap` from `common` for login world selection via `MU_LOGIN_WORLD`
- Modified Cargo.toml and workspace to include `common` package
- Refactored login scene module to parse env var and send appropriate `WorldId`
- Added world‑filter support to asset conversion scripts (Python) for targeted builds
- Simplified scene components (removed `Terrain`, `SceneObject` fields) and related systems
- Removed deprecated error variants and unused fields from server code
- Added comprehensive tests for `WorldMap` functionality
- Updated asset reports to limit processing to login worlds 55, 74, 77

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,15 @@ members = [
     "protocol",
     "client",
     "server",
+    "common",
 ]
 
 [workspace.dependencies]
 protocol = { path = "protocol" }
+common = { path = "common" }
 
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
