--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 protocol = { workspace = true }
+common = { workspace = true }
 bevy = { version = "0.14.2", default-features = false, features = [
     "bevy_asset",
     "bevy_core_pipeline",
