Add bevy animation, terrain map & texture slot assets, BMD animation/GLTF conversion
- Enable bevy animation feature in Cargo.toml
- Add bevy_animation dependency and its libraries
- Add SceneObjectAnimationSource and SceneObjectAnimationInitialized components
- Introduce start_scene_object_animations system and animation cache
- Add RuntimeSunLight component and spawn_runtime_sun_light system
- Add TerrainMapData, TerrainTextureSlotsData and loaders
- Add new animation module and update systems registration
- Extend BMD converter to export skeletal animations and GLTF files
- Update asset conversion scripts for canonical path handling and terrain outputs

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 protocol = { workspace = true }
 common = { workspace = true }
 bevy = { version = "0.14.2", default-features = false, features = [
+    "animation",
     "bevy_asset",
     "bevy_core_pipeline",
     "bevy_render",
