--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -20,6 +20,7 @@ bevy = { version = "0.14.2", default-features = false, features = [
     "bevy_winit",
     "bevy_state",
     "png",
+    "jpeg",
     "tga",
     "default_font",
     "x11"
