Add frame limiter, shadow quality controls, and offscreen animation handling
- Introduce DebugFrameLimiter and bind toggle to F4, adjusting window present mode and update settings
- Add DebugShadowQuality resource and bind cycle to F5, switching cascade counts, sizes, and filtering methods
- Implement toggle_offscreen_scene_animations to pause/resume animations for scene objects hidden by visibility
- Update Cargo.toml with multi_threaded feature and add async-channel, concurrent-queue, arrayvec dependencies; modify Cargo.lock accordingly
- Disable PipelinedRenderingPlugin in main plugins setup
- Reduce sun cascade count to 1 and adjust distances; insert DirectionalLightShadowMap and set hardware 2x2 filtering
- Modify BMD converter to use opaque alpha mode for legacy additive materials and adjust emissive handling

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,6 +19,7 @@ bevy = { version = "0.14.2", default-features = false, features = [
     "bevy_ui",
     "bevy_winit",
     "bevy_state",
+    "multi_threaded",
     "png",
     "jpeg",
     "tga",
