--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,6 +19,7 @@ bevy = { version = "0.14.2", default-features = false, features = [
     "bevy_ui",
     "bevy_winit",
     "bevy_state",
+    "bevy_gizmos",
     "multi_threaded",
     "png",
     "jpeg",
@@ -31,3 +32,7 @@ serde_json = "1.0"
 rand = "0.8"
 thiserror = "1.0"
 bevy_egui = "0.28"
+
+[[bin]]
+name = "character_viewer"
+path = "src/bin/character_viewer.rs"
