--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,20 +6,27 @@ edition = "2024"
 [dependencies]
 protocol = { workspace = true }
 common = { workspace = true }
-bevy = { version = "0.14.2", default-features = false, features = [
-    "animation",
+bevy = { version = "0.18.0", default-features = false, features = [
+    "bevy_animation",
     "bevy_asset",
+    "bevy_log",
+    "bevy_camera",
+    "bevy_image",
+    "bevy_mesh",
+    "bevy_light",
     "bevy_core_pipeline",
     "bevy_render",
     "bevy_pbr",
     "bevy_scene",
     "bevy_gltf",
+    "gltf_animation",
     "bevy_sprite",
     "bevy_text",
     "bevy_ui",
     "bevy_winit",
     "bevy_state",
     "bevy_gizmos",
+    "reflect_auto_register",
     "multi_threaded",
     "png",
     "jpeg",
@@ -31,7 +38,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8"
 thiserror = "1.0"
-bevy_egui = "0.28"
+bevy_egui = "0.39.1"
 
 [[bin]]
 name = "character_viewer"
