Add Solaris raytracing toggle and mesh raytracing integration
- Introduce bevy_solari crate and feature flag
- Add viewer state flags for raytracing control
- Hook Solaris plugins into App startup and update systems
- Adjust camera, lighting, and MSAA settings for raytracing
- Provide UI checkbox to toggle raytracing and handle pending changes
- Tag spawned meshes with RaytracingMesh3d when raytracing is enabled
- Update Cargo.toml and Cargo.lock with Solaris dependencies
- Change default login world alias from LoginScene to Noria

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -40,6 +40,9 @@ rand = "0.8"
 thiserror = "1.0"
 bevy_egui = "0.39.1"
 
+[features]
+solari = ["bevy/bevy_solari"]
+
 [[bin]]
 name = "character_viewer"
 path = "src/bin/character_viewer.rs"
