--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -23,6 +23,7 @@ bevy = { version = "0.18.0", default-features = false, features = [
     "bevy_sprite",
     "bevy_text",
     "bevy_ui",
+    "bevy_ui_render",
     "bevy_winit",
     "bevy_state",
     "bevy_gizmos",
@@ -36,6 +37,7 @@ bevy = { version = "0.18.0", default-features = false, features = [
 ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 rand = "0.8"
 thiserror = "1.0"
 bevy_egui = "0.39.1"
