--- a/settings.yaml
+++ b/settings.yaml
@@ -3,10 +3,11 @@ graphics:
   resolution:
     width: 1280
     height: 720
-  shadow_quality: low
-  vsync: true
+  shadow_quality: off
+  vsync: false
   fps_limit: default60
   render_distance: medium
+  show_grass: false
 audio:
   ambient_enabled: true
   effects_enabled: true
