Add detailed deathstab VFX rewriting and new skill VFX profiles with fade support
- Enable bevy_post_process via Cargo and Client Cargo.toml
- Refactor DeathStab VFX into timeline component with energy, spike, and impact phases
- Introduce SkillVfxFade component and update system for emissive fading
- Replace generic skill VFX with specific profile handling for many skills
- Add rotation‑aware spawn functions and follow offsets for VFX scenes
- Update skill timing values and add numerous new VFX profile entries
- Register new systems: death_stab_timeline, energy/spike particle updates,
  material overrides, animation initialization, lightning effects, auto‑lifetime,
  and weapon trail improvements
- Expose new components and markers for timeline, particles, and material state
- Add extensive preload logic for all specific skill VFX assets

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -15,6 +15,7 @@ bevy = { version = "0.18.0", default-features = false, features = [
     "bevy_mesh",
     "bevy_light",
     "bevy_core_pipeline",
+    "bevy_post_process",
     "bevy_render",
     "bevy_pbr",
     "bevy_scene",
