Add remaster asset support, new skill viewers, and shader updates
- Introduced remaster assets resolver and F10 toggle with UI checkbox
- Added LightningSprite2d shader and material for additive 2D effects
- Added DwMagic viewer (`dw_magic.rs`) with full VFX implementation
- Added EvilSpirit viewer (`evil_spirit_viewer.rs`) simulating 25 TPS behavior
- Updated Cargo.toml with bevy_audio feature and remaster bin entries
- Rewired asset loading to use `resolve_asset_path` with remaster mode
- Added new skill profiles (Meteorite, Flame, Twister) and related VFX
- Integrated new VFX systems, initialization, and timing logic
- Added asset path resolution infrastructure (`mod.rs`, `resolver.rs`)
- Updated UI to expose remaster toggle and related settings

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,6 +9,7 @@ common = { workspace = true }
 bevy = { version = "0.18.0", default-features = false, features = [
     "bevy_animation",
     "bevy_asset",
+    "bevy_audio",
     "bevy_log",
     "bevy_camera",
     "bevy_image",
@@ -34,6 +35,10 @@ bevy = { version = "0.18.0", default-features = false, features = [
     "jpeg",
     "tga",
     "default_font",
+    "vorbis",
+    "wav",
+    "mp3",
+    "flac",
     "x11"
 ] }
 serde = { version = "1.0", features = ["derive"] }
@@ -49,3 +54,11 @@ solari = ["bevy/bevy_solari"]
 [[bin]]
 name = "character_viewer"
 path = "src/bin/character_viewer.rs"
+
+[[bin]]
+name = "skill43_viewer"
+path = "src/bin/skill43_viewer.rs"
+
+[[bin]]
+name = "evil_spirit_viewer"
+path = "src/bin/evil_spirit_viewer.rs"
